tests/errors/E010.zen
int main() {
    return 9223372036854775808;   // E010: Integer literal overflow
}